<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Skip_text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="330dp"
        android:textSize="20sp"
        android:textColor="@color/navy"

        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/onboarding_1"
            android:layout_centerInParent="true"
            android:contentDescription="@string/splash_image_description"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/onboardingtext_1"
            android:textSize="18sp"
            android:textColor="@color/navy"
            android:gravity="center"
            android:layout_marginTop="30dp"
            />

    </LinearLayout>
    <Button
        android:layout_width="324dp"
        android:layout_height="50dp"
        android:background="@drawable/round_btn"
        android:layout_marginTop="600dp"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"

        />

</RelativeLayout>