<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding_3">
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_btn"
            android:layout_centerHorizontal="true"


            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Skip_text"

            android:layout_marginStart="300dp"
            android:textSize="20sp"
            android:textColor="@color/navy"
            android:layout_centerHorizontal="true"

            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/onboarding_3"
            android:layout_centerInParent="true" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/onboarding3_text"
            android:textSize="18sp"
            android:textColor="@color/navy"
            android:gravity="center"
            android:layout_marginTop="30dp"
            />

    </LinearLayout>
    <Button
        android:layout_width="324dp"
        android:layout_height="50dp"
        android:background="@drawable/round_btn"
        android:layout_marginTop="600dp"
        android:text="@string/finish_btn_text"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"

        />



</RelativeLayout>