<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginTop="10dp"
       android:paddingBottom="5dp"
       android:gravity="center">

       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/back_btn"
           android:layout_gravity="center_vertical"/>

       <TextView
           android:id="@+id/settings"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingTop="5dp"
           android:text="Settings"
           android:textSize="24sp"
           android:textColor="@color/navy"
           android:fontFamily="sans-serif-black"
           android:layout_marginStart="132dp"
           android:layout_marginEnd="132dp"
           android:layout_gravity="center_horizontal"
           android:gravity="center" />
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/user_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:padding="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/user_profile"
                    android:layout_marginEnd="16dp"/>


                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/profile_settings_text"
                    android:textSize="16sp"
                    android:textColor="@color/navy"
                    android:fontFamily="sans-serif"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/forward_arrow"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/user_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:padding="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/notification_bell"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/settings_notifications_text"
                    android:textSize="16sp"
                    android:textColor="@color/navy"
                    android:fontFamily="sans-serif"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/forward_arrow"
                    android:layout_gravity="right"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/dark_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:padding="15dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/night_mode_moon"
                    android:layout_marginEnd="16dp"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/settings_dark_mode_text"
                    android:textColor="@color/navy"
                    android:textSize="16sp" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/user_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:padding="15dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/user_privacy"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/privacy"
                    android:textSize="16sp"
                    android:textColor="@color/navy"
                    android:fontFamily="sans-serif"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/forward_arrow"
                    android:layout_gravity="right"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/user_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:padding="15dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/user_feedback"
                    android:layout_marginEnd="16dp"
                    />

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/settings_feedback_text"
                    android:textSize="16sp"
                    android:textColor="@color/navy"
                    android:fontFamily="sans-serif"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/forward_arrow"
                    android:layout_gravity="right"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/share_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:padding="15dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/share_app"
                    android:layout_marginEnd="16dp"/>


                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/settings_share_text"
                    android:textSize="16sp"
                    android:textColor="@color/navy"
                    android:fontFamily="sans-serif"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/forward_arrow"
                    android:layout_gravity="right"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/about_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:padding="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/about_app"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/settings_about_text"
                    android:textSize="16sp"
                    android:textColor="@color/navy"
                    android:fontFamily="sans-serif"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/forward_arrow"
                    android:layout_gravity="right"
                    />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/user_logout"
        android:gravity="center_horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/logout_button_shape"
        android:textAllCaps="false"
        android:text="@string/settings_logout_text"
        android:textAlignment="gravity"
        android:textSize="20sp"
        android:padding="16dp"
        android:textColor="@color/navy"
        android:drawableStart="@drawable/logout_button"
        android:drawablePadding="8dp" />

</RelativeLayout>